
[project]
name = "requests_html2"
version = "1.0.1"
description = "HTML Parsing for Humans"
authors = [
    {name = "Bevis", email = "alonefire@foxmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "pyquery>=1.4.3",
    "fake-useragent>=1.1.3",
    "w3lib>=2.0.1",
    "parse>=1.19.0",
    "beautifulsoup4>=4.12.2",
    "pyppeteer>=1.0.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/AloneFire/requests_html2"
"Bug Tracker" = "https://github.com/AloneFire/requests_html2"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
